fix(home): remove line break in subtitle to correctly display on mobile

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -24,6 +24,7 @@
 
     h3 {
         margin-top: 0;
+        max-width: 20em;
     }
 
     @media #{$md-up} {
